--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,100 +1,233 @@
-<div class="tw-h-14 tw-bg-white tw-flex tw-justify-between tw-items-center tw-pr-3 tw-shadow-[0px_2px_2px_0px_rgba(0,0,0,0.1)]">
-  <button class="tw-border-0 tw-outline-none tw-bg-white tw-p-3">
-    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="14" viewBox="0 0 8 14" fill="none">
-      <path d="M0.322079 7.41992L5.98208 13.0699C6.07504 13.1637 6.18564 13.238 6.3075 13.2888C6.42936 13.3396 6.56007 13.3657 6.69208 13.3657C6.82409 13.3657 6.9548 13.3396 7.07666 13.2888C7.19851 13.238 7.30912 13.1637 7.40208 13.0699C7.58833 12.8826 7.69287 12.6291 7.69287 12.3649C7.69287 12.1007 7.58833 11.8473 7.40208 11.6599L2.45208 6.65992L7.40208 1.70992C7.58833 1.52256 7.69287 1.26911 7.69287 1.00492C7.69287 0.740739 7.58833 0.487288 7.40208 0.299925C7.30946 0.205437 7.19902 0.130266 7.07714 0.0787697C6.95527 0.0272732 6.82439 0.00047493 6.69208 -7.43866e-05C6.55977 0.00047493 6.42889 0.0272732 6.30701 0.0787697C6.18514 0.130266 6.07469 0.205437 5.98208 0.299925L0.322079 5.94992C0.220574 6.04357 0.139565 6.15722 0.0841579 6.28372C0.0287504 6.41022 0.000145912 6.54682 0.000145912 6.68492C0.000145912 6.82303 0.0287504 6.95963 0.0841579 7.08613C0.139565 7.21263 0.220574 7.32628 0.322079 7.41992Z" fill="#424242"/>
-    </svg>
-  </button>
-  <span class="tw-text-[#424242] tw-font-semibold tw-text-sm tw-leading-[17px]">Item List</span>
-  <button class="tw-border-0 tw-outline-none tw-bg-white">
-  </button>
-</div>
-
 <div class="checkout tw-py-5 tw-px-6">
   <div class="tw-mb-[22px]">
-    <h2 class="tw-text-2xl tw-font-semibold tw-leading-[29px] tw-text-[#424242] tw-mb-[14px]">Delivery To</h2>
+    <h2
+      class="tw-text-2xl tw-font-semibold tw-leading-[29px] tw-text-[#424242] tw-mb-[14px]"
+    >
+      Delivery To
+    </h2>
     <div class="tw-mb-3">
-      <div class="tw-text-[12px] tw-font-medium tw-leading-[14px] tw-text-[rgba(66,66,66,0.25)] tw-mb-1">Guest Name</div>
-      <div class="tw-text-sm tw-font-normal tw-leading-[17px] tw-text-[rgba(66,66,66,1)]">Yogek Garg</div>
+      <div
+        class="tw-text-[12px] tw-font-medium tw-leading-[14px] tw-text-[rgba(66,66,66,0.25)] tw-mb-1"
+      >
+        Guest Name
+      </div>
+      <div
+        class="tw-text-sm tw-font-normal tw-leading-[17px] tw-text-[rgba(66,66,66,1)]"
+      >
+        Yogek Garg
+      </div>
     </div>
     <div>
-      <div class="tw-text-[12px] tw-font-medium tw-leading-[14px] tw-text-[rgba(66,66,66,0.25)] tw-mb-1">Room Number</div>
-      <div class="tw-text-sm tw-font-normal tw-leading-[17px] tw-text-[rgba(66,66,66,1)]">103</div>
+      <div
+        class="tw-text-[12px] tw-font-medium tw-leading-[14px] tw-text-[rgba(66,66,66,0.25)] tw-mb-1"
+      >
+        Room Number
+      </div>
+      <div
+        class="tw-text-sm tw-font-normal tw-leading-[17px] tw-text-[rgba(66,66,66,1)]"
+      >
+        103
+      </div>
     </div>
   </div>
   <div class="tw-mb-[30px]">
-    <h2 class="tw-text-2xl tw-font-semibold tw-leading-[29px] tw-text-[#424242] tw-mb-[19px]">My Order</h2>
+    <h2
+      class="tw-text-2xl tw-font-semibold tw-leading-[29px] tw-text-[#424242] tw-mb-[19px]"
+    >
+      My Order
+    </h2>
     <div>
-      <div class="tw-h-[106px] tw-flex tw-flex-row tw-gap-[18px] tw-mb-6 tw-w-full">
-        <div class="tw-h-[108px] tw-w-[108px] tw-p-4 tw-shadow-[3px_0px_10px_0px_rgba(116,65,0,0.3)] tw-text-center">
-          <img class="tw-w-auto tw-h-auto tw-max-h-full tw-max-w-full tw-m-auto" src="../../assets/images/list-item-2.png" alt="" >
+      <div
+        class="tw-h-[106px] tw-flex tw-flex-row tw-gap-[18px] tw-mb-6 tw-w-full"
+      >
+        <div
+          class="tw-h-[108px] tw-w-[108px] tw-p-4 tw-shadow-[3px_0px_10px_0px_rgba(116,65,0,0.3)] tw-text-center"
+        >
+          <img
+            class="tw-w-auto tw-h-auto tw-max-h-full tw-max-w-full tw-m-auto"
+            src="../../assets/images/list-item-2.png"
+            alt=""
+          />
         </div>
         <div class="tw-relative tw-pr-10">
           <div class="tw-mb-[7px]">
-            <h3 class="tw-text-lg tw-leading-[22px] tw-font-medium tw-text-[#424242] tw-mb-2">Margaritte Pizza</h3>
-            <div class="tw-text-base tw-leading-[19px] tw-font-medium tw-text-[#FF7D0B] tw-mb-[6px]">₹ 150</div>
-            <div class="tw-text-[12px] tw-leading-[14px] tw-font-normal tw-text-[#424242] tw-mb-[7px]">Quantity</div>
+            <h3
+              class="tw-text-lg tw-leading-[22px] tw-font-medium tw-text-[#424242] tw-mb-2"
+            >
+              Margaritte Pizza
+            </h3>
+            <div
+              class="tw-text-base tw-leading-[19px] tw-font-medium tw-text-[#FF7D0B] tw-mb-[6px]"
+            >
+              ₹ 150
+            </div>
+            <div
+              class="tw-text-[12px] tw-leading-[14px] tw-font-normal tw-text-[#424242] tw-mb-[7px]"
+            >
+              Quantity
+            </div>
           </div>
-          <span class="tw-inline-flex tw-border tw-border-solid tw-border-[#F6A60B] tw-rounded-[3px] tw-w-[75px] tw-h-[25px]">
-            <button class="tw-w-[25px] tw-text-[#F6A60B] tw-text-base tw-leading-[18px]">-</button>
-            <span class="tw-w-[25px] tw-text-white tw-text-[15px] tw-leading-[18px] tw-bg-[#F6A60B] tw-inline-flex tw-justify-center tw-items-center">1</span>
-            <button class="tw-w-[25px] tw-text-[#F6A60B] tw-text-base tw-leading-[18px]">+</button>
+          <span
+            class="tw-inline-flex tw-border tw-border-solid tw-border-[#F6A60B] tw-rounded-[3px] tw-w-[75px] tw-h-[25px]"
+          >
+            <button
+              class="tw-w-[25px] tw-text-[#F6A60B] tw-text-base tw-leading-[18px]"
+            >
+              -
+            </button>
+            <span
+              class="tw-w-[25px] tw-text-white tw-text-[15px] tw-leading-[18px] tw-bg-[#F6A60B] tw-inline-flex tw-justify-center tw-items-center"
+              >1</span
+            >
+            <button
+              class="tw-w-[25px] tw-text-[#F6A60B] tw-text-base tw-leading-[18px]"
+            >
+              +
+            </button>
           </span>
-          <div class="tw-w-[19px] tw-h-[18px] tw-p-1 tw-rounded-[3px] tw-bg-[#F6A60B] tw-absolute tw-right-0 tw-top-0">
-            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="8" viewBox="0 0 11 8" fill="none">
-              <path d="M3.59213 5.96565L1.07909 3.5968L0 4.61397L3.59213 8L11 1.01717L9.92091 0L3.59213 5.96565Z" fill="white"/>
-              </svg>
+          <div
+            class="tw-w-[19px] tw-h-[18px] tw-p-1 tw-rounded-[3px] tw-bg-[#F6A60B] tw-absolute tw-right-0 tw-top-0"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="11"
+              height="8"
+              viewBox="0 0 11 8"
+              fill="none"
+            >
+              <path
+                d="M3.59213 5.96565L1.07909 3.5968L0 4.61397L3.59213 8L11 1.01717L9.92091 0L3.59213 5.96565Z"
+                fill="white"
+              />
+            </svg>
           </div>
         </div>
       </div>
-      <div class="tw-h-[106px] tw-flex tw-flex-row tw-gap-[18px] tw-mb-6 tw-w-full">
-        <div class="tw-h-[108px] tw-w-[108px] tw-p-4 tw-shadow-[3px_0px_10px_0px_rgba(116,65,0,0.3)] tw-text-center">
-          <img class="tw-w-auto tw-h-auto tw-max-h-full tw-max-w-full tw-m-auto" src="../../assets/images/list-item-2.png" alt="" >
+      <div
+        class="tw-h-[106px] tw-flex tw-flex-row tw-gap-[18px] tw-mb-6 tw-w-full"
+      >
+        <div
+          class="tw-h-[108px] tw-w-[108px] tw-p-4 tw-shadow-[3px_0px_10px_0px_rgba(116,65,0,0.3)] tw-text-center"
+        >
+          <img
+            class="tw-w-auto tw-h-auto tw-max-h-full tw-max-w-full tw-m-auto"
+            src="../../assets/images/list-item-2.png"
+            alt=""
+          />
         </div>
         <div class="tw-relative tw-pr-10">
           <div class="tw-mb-[7px]">
-            <h3 class="tw-text-lg tw-leading-[22px] tw-font-medium tw-text-[#424242] tw-mb-2">Margaritte Pizza</h3>
-            <div class="tw-text-base tw-leading-[19px] tw-font-medium tw-text-[#FF7D0B] tw-mb-[6px]">₹ 150</div>
-            <div class="tw-text-[12px] tw-leading-[14px] tw-font-normal tw-text-[#424242] tw-mb-[7px]">Quantity</div>
+            <h3
+              class="tw-text-lg tw-leading-[22px] tw-font-medium tw-text-[#424242] tw-mb-2"
+            >
+              Margaritte Pizza
+            </h3>
+            <div
+              class="tw-text-base tw-leading-[19px] tw-font-medium tw-text-[#FF7D0B] tw-mb-[6px]"
+            >
+              ₹ 150
+            </div>
+            <div
+              class="tw-text-[12px] tw-leading-[14px] tw-font-normal tw-text-[#424242] tw-mb-[7px]"
+            >
+              Quantity
+            </div>
           </div>
-          <span class="tw-inline-flex tw-border tw-border-solid tw-border-[#F6A60B] tw-rounded-[3px] tw-w-[75px] tw-h-[25px]">
-            <button class="tw-w-[25px] tw-text-[#F6A60B] tw-text-base tw-leading-[18px]">-</button>
-            <span class="tw-w-[25px] tw-text-white tw-text-[15px] tw-leading-[18px] tw-bg-[#F6A60B] tw-inline-flex tw-justify-center tw-items-center">1</span>
-            <button class="tw-w-[25px] tw-text-[#F6A60B] tw-text-base tw-leading-[18px]">+</button>
+          <span
+            class="tw-inline-flex tw-border tw-border-solid tw-border-[#F6A60B] tw-rounded-[3px] tw-w-[75px] tw-h-[25px]"
+          >
+            <button
+              class="tw-w-[25px] tw-text-[#F6A60B] tw-text-base tw-leading-[18px]"
+            >
+              -
+            </button>
+            <span
+              class="tw-w-[25px] tw-text-white tw-text-[15px] tw-leading-[18px] tw-bg-[#F6A60B] tw-inline-flex tw-justify-center tw-items-center"
+              >1</span
+            >
+            <button
+              class="tw-w-[25px] tw-text-[#F6A60B] tw-text-base tw-leading-[18px]"
+            >
+              +
+            </button>
           </span>
-          <div class="tw-w-[19px] tw-h-[18px] tw-p-1 tw-rounded-[3px] tw-bg-[#F6A60B] tw-absolute tw-right-0 tw-top-0">
-            <svg xmlns="http://www.w3.org/2000/svg" width="11" height="8" viewBox="0 0 11 8" fill="none">
-              <path d="M3.59213 5.96565L1.07909 3.5968L0 4.61397L3.59213 8L11 1.01717L9.92091 0L3.59213 5.96565Z" fill="white"/>
-              </svg>
+          <div
+            class="tw-w-[19px] tw-h-[18px] tw-p-1 tw-rounded-[3px] tw-bg-[#F6A60B] tw-absolute tw-right-0 tw-top-0"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="11"
+              height="8"
+              viewBox="0 0 11 8"
+              fill="none"
+            >
+              <path
+                d="M3.59213 5.96565L1.07909 3.5968L0 4.61397L3.59213 8L11 1.01717L9.92091 0L3.59213 5.96565Z"
+                fill="white"
+              />
+            </svg>
           </div>
         </div>
       </div>
     </div>
   </div>
   <div>
-    <h2 class="tw-text-lg tw-font-medium tw-leading-[21px] tw-text-[#424242]">Bill Details</h2>
+    <h2 class="tw-text-lg tw-font-medium tw-leading-[21px] tw-text-[#424242]">
+      Bill Details
+    </h2>
     <div class="tw-mb-[29px]">
       <div class="tw-flex tw-justify-between tw-flex-row tw-mb-[15px]">
-        <span class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium">Items Total</span>
-        <span class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium">₹ 300</span>
+        <span
+          class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium"
+          >Items Total</span
+        >
+        <span
+          class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium"
+          >₹ 300</span
+        >
       </div>
       <div class="tw-flex tw-justify-between tw-flex-row tw-mb-[15px]">
-        <span class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium">GST and Restaurant Charges</span>
-        <span class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium">₹ 50</span>
+        <span
+          class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium"
+          >GST and Restaurant Charges</span
+        >
+        <span
+          class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium"
+          >₹ 50</span
+        >
       </div>
       <div class="tw-flex tw-justify-between tw-flex-row tw-mb-[15px]">
-        <span class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium">Service Charge</span>
-        <span class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium">₹ 20</span>
+        <span
+          class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium"
+          >Service Charge</span
+        >
+        <span
+          class="tw-text-[11px] tw-leading-[13px] tw-text-[#424242] tw-font-medium"
+          >₹ 20</span
+        >
       </div>
     </div>
     <div class="tw-flex tw-justify-between tw-flex-row tw-mb-[17px]">
       <span>
-        <strong class="tw-text-2xl tw-leading-[29px] tw-font-medium tw-text-black">Total</strong>
-        <span class="tw-text-[#424242] tw-text-sm tw-leading-[17px] tw-ml-3">(2 Item)</span>
+        <strong
+          class="tw-text-2xl tw-leading-[29px] tw-font-medium tw-text-black"
+          >Total</strong
+        >
+        <span class="tw-text-[#424242] tw-text-sm tw-leading-[17px] tw-ml-3"
+          >(2 Item)</span
+        >
       </span>
-      <span class="tw-text-[#F6A60B] tw-text-2xl tw-leading-[29px] tw-font-medium">₹ 380</span>
+      <span
+        class="tw-text-[#F6A60B] tw-text-2xl tw-leading-[29px] tw-font-medium"
+        >₹ 380</span
+      >
     </div>
     <div class="tw-mb-[15px] tw-text-center">
-      <button class="tw-w-full tw-max-w-[320px] tw-h-14 tw-bg-[#05162E] tw-text-white tw-text-2xl tw-font-medium tw-rounded">Place Order</button>
+      <button
+        class="tw-w-full tw-max-w-[320px] tw-h-14 tw-bg-[#05162E] tw-text-white tw-text-2xl tw-font-medium tw-rounded"
+      >
+        Place Order
+      </button>
     </div>
   </div>
 </div>
