--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,6 +2,7 @@
   class="tw-fixed tw-bottom-0 tw-left-2/4 tw--translate-x-2/4 tw-h-12 tw-max-w-3xl tw-w-full tw-bg-[#05162E] tw-z-10"
 >
   <div
+    (click)="proceedCheckOut()"
     class="tw-text-white tw-text-center tw-text-xs tw-font-semibold tw-leading-[14.63px] tw-pt-[7px] tw-pb-[6px] tw-flex tw-flex-col tw-justify-between tw-gap-[6px]"
   >
     <p class="tw-items-center">
