--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,6 +21,7 @@
   </div>
   <button
     class="tw-w-[108px] tw-h-[31px] tw-bg-[#05162E] tw-text-white tw-rounded tw-flex tw-items-center tw-justify-start tw-px-3"
+    (click)="proceedCheckOut()"
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
