Added empty cart and fix foot check

--- a/src/app/empty-cart/empty-cart.component.html
+++ b/src/app/empty-cart/empty-cart.component.html
@@ -1,1 +1,250 @@
-<p>empty-cart works!</p>
+<div class="checkout tw-py-5 tw-px-6">
+  <div class="tw-mb-[22px]">
+    <h2
+      class="tw-text-2xl tw-font-semibold tw-leading-[29px] tw-text-[#424242] tw-mb-[14px]"
+    >
+      Delivery To
+    </h2>
+    <div class="tw-mb-3">
+      <div
+        class="tw-text-[12px] tw-font-medium tw-leading-[14px] tw-text-[rgba(66,66,66,0.25)] tw-mb-1"
+      >
+        Guest Name
+      </div>
+      <div
+        class="tw-text-sm tw-font-normal tw-leading-[17px] tw-text-[rgba(66,66,66,1)]"
+      >
+        Yogek Garg
+      </div>
+    </div>
+    <div>
+      <div
+        class="tw-text-[12px] tw-font-medium tw-leading-[14px] tw-text-[rgba(66,66,66,0.25)] tw-mb-1"
+      >
+        Room Number
+      </div>
+      <div
+        class="tw-text-sm tw-font-normal tw-leading-[17px] tw-text-[rgba(66,66,66,1)]"
+      >
+        103
+      </div>
+    </div>
+  </div>
+  <div class="tw-mb-[30px]">
+    <h2
+      class="tw-text-2xl tw-font-semibold tw-leading-[29px] tw-text-[#424242] tw-mb-[19px]"
+    >
+      My Order
+    </h2>
+    <div>
+      <div>
+        <div class="tw-mb-[31px]">
+          <svg
+            width="165"
+            height="227"
+            viewBox="0 0 165 227"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            class="tw-m-auto"
+          >
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M70.7219 161.952C70.7219 177.967 57.7386 190.949 41.7259 190.949C25.7107 190.949 12.7299 177.967 12.7299 161.952C12.7299 145.938 25.7107 132.957 41.7259 132.957C57.7386 132.957 70.7219 145.938 70.7219 161.952Z"
+              fill="#CB3E3E"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M157.003 60.1124C157.003 68.3148 150.355 74.9653 142.153 74.9653C133.95 74.9653 127.3 68.3148 127.3 60.1124C127.3 51.91 133.95 45.2621 142.153 45.2621C150.355 45.2621 157.003 51.91 157.003 60.1124Z"
+              fill="#46B658"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M132.957 160.598C132.957 163.298 130.924 165.489 128.414 165.489H48.391C45.8838 165.489 43.8477 163.298 43.8477 160.598V26.1076C43.8477 23.4058 45.8838 21.2166 48.391 21.2166H128.414C130.924 21.2166 132.957 23.4058 132.957 26.1076V160.598Z"
+              fill="white"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M48.1277 22.0606C46.2262 22.0606 44.6785 23.7563 44.6785 25.8405V160.863C44.6785 162.947 46.2262 164.643 48.1277 164.643H128.675C130.576 164.643 132.124 162.947 132.124 160.863V25.8405C132.124 23.7563 130.576 22.0606 128.675 22.0606H48.1277ZM128.675 166.904H48.1275C44.9868 166.904 42.4331 164.194 42.4331 160.863V25.8404C42.4331 22.5122 44.9868 19.8021 48.1275 19.8021H128.675C131.815 19.8021 134.372 22.5122 134.372 25.8404V160.863C134.372 164.194 131.815 166.904 128.675 166.904Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M46.6764 147.102H128.714V32.5321H46.6764V147.102Z"
+              fill="#DFB23F"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M66.6506 96.1819L65.0643 94.5955L91.7667 67.8931L93.3531 69.4795L66.6506 96.1819Z"
+              fill="white"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M63.8335 114.57L62.2353 112.971L86.097 89.1097L87.6952 90.7079L63.8335 114.57Z"
+              fill="white"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M161.244 226.31L161.246 199.499L90.5291 199.436L90.5241 226.253L161.244 226.31Z"
+              fill="#46B658"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M162.658 226.31H160.396L160.399 200.357L91.3768 200.296L91.3718 226.252H89.1097L89.1148 198.022L162.661 198.088L162.658 226.31Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M102.444 150.016C102.57 150.094 102.687 150.169 102.813 150.242L102.444 150.458V150.016ZM162.452 154.918L162.653 125.102C162.603 120.497 158.827 116.809 154.213 116.844C149.609 116.891 145.903 120.672 145.953 125.28L145.955 125.09C145.91 120.482 142.124 116.783 137.523 116.836C133.335 116.876 129.935 119.995 129.368 124.009C129.291 124.007 129.213 124.007 129.14 124.007C128.56 119.912 125.068 116.781 120.823 116.824C116.211 116.871 112.505 120.642 112.555 125.253L112.442 83.6507C112.4 78.8068 108.626 74.9156 104.01 74.9658C99.398 75.0134 95.6972 78.9898 95.7499 83.8288L95.8001 88.62V92.5212L95.8252 120.055C95.361 119.968 94.8893 119.907 94.4001 119.907C89.9415 119.91 86.3235 123.565 86.3135 128.078L86.2859 164.172L86.3461 169.302L86.2808 170.796C86.2683 182.109 91.0179 192.29 98.6152 199.388L150.268 199.436C157.868 192.353 162.648 182.184 162.658 170.869L162.661 170.302L162.452 154.918Z"
+              fill="white"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M111.741 124.471C111.714 121.851 112.649 119.38 114.368 117.511C116.086 115.642 118.386 114.598 120.842 114.57H120.93C125.949 114.57 130.068 118.9 130.128 124.266L127.947 124.294C127.904 120.172 124.817 116.862 120.864 116.896C118.99 116.914 117.235 117.711 115.923 119.136C114.611 120.564 113.898 122.448 113.92 124.445L111.741 124.471Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M128.715 124.471C128.688 121.851 129.623 119.383 131.342 117.511C133.061 115.639 135.359 114.596 137.818 114.57C140.299 114.585 142.585 115.533 144.341 117.363C146.096 119.198 147.075 121.649 147.102 124.266L144.923 124.289C144.901 122.293 144.156 120.421 142.814 119.024C141.497 117.648 139.764 116.893 137.923 116.893H137.84C135.963 116.914 134.207 117.711 132.898 119.136C131.585 120.564 130.874 122.448 130.894 124.445L128.715 124.471Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M96.2531 118.813L96.1825 83.1058C96.1532 80.5831 97.0838 78.2006 98.8036 76.3918C100.523 74.5855 102.823 73.5759 105.281 73.5509C107.678 73.5985 110.06 74.4853 111.814 76.254C113.566 78.0227 114.545 80.3877 114.57 82.9129L112.389 82.9355C112.372 81.009 111.624 79.2027 110.287 77.8549C108.947 76.5045 107.12 75.783 105.3 75.7931C103.427 75.8131 101.673 76.5847 100.363 77.9601C99.0521 79.3405 98.3408 81.1568 98.3627 83.0808L98.4114 91.3506L98.4358 118.81L96.2531 118.813Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M111.946 130.128L111.833 82.0426L114.364 82.0375L114.478 130.126L111.946 130.128Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M131.39 130.128H128.858L128.867 123.056L131.399 123.059L131.39 130.128Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M148.363 130.128L145.832 130.126L145.84 123.056L148.372 123.059L148.363 130.128Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M150.904 199.436L97.9773 199.388L97.6513 199.087C89.5148 191.536 84.8538 180.811 84.8665 169.662L84.9373 168.117L84.8715 163.054L84.9019 126.932C84.912 121.805 89.0725 117.637 94.1783 117.635C96.6579 117.637 98.9833 118.61 100.735 120.373C102.479 122.137 103.44 124.472 103.432 126.955L103.412 149.319L101.15 149.317L101.17 126.952C101.175 125.061 100.447 123.285 99.1224 121.948C97.8004 120.617 96.0437 119.882 94.1758 119.879C90.3186 119.882 87.1692 123.047 87.1641 126.935L87.1338 163.041L87.197 168.155L87.1262 169.715C87.1161 180.046 91.3928 190.036 98.8747 197.144L150.009 197.191C157.506 190.088 161.8 180.109 161.808 169.738L161.813 169.161L161.603 153.794L161.803 123.947C161.76 119.995 158.55 116.742 154.442 116.814C152.504 116.834 150.686 117.607 149.324 118.986C147.961 120.368 147.221 122.192 147.244 124.12L144.981 124.143C144.953 121.617 145.922 119.227 147.706 117.416C149.491 115.608 151.874 114.595 154.422 114.57H154.495C159.725 114.57 164.009 118.758 164.067 123.945L163.865 153.786L164.075 169.156L164.07 169.748C164.062 180.879 159.381 191.593 151.23 199.135L150.904 199.436Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M129.577 1.41443H94.4972H82.3079H47.2282L31.1178 42.4332H82.3079H94.4972H145.687L129.577 1.41443Z"
+              fill="#CB3E3E"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M102.326 1.41443H91.0646H87.1522H75.8937L70.7219 42.4332H87.1522H91.0646H107.497L102.326 1.41443Z"
+              fill="white"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M67.8932 42.4332C67.8932 52.5886 59.6628 60.8209 49.5042 60.8209C39.3481 60.8209 31.1178 52.5886 31.1178 42.4332H67.8932Z"
+              fill="white"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M49.5053 63.6498C38.5858 63.6498 29.7032 54.767 29.7032 43.8476H31.9518C31.9518 53.5275 39.8259 61.3995 49.5053 61.3995C59.1823 61.3995 67.0563 53.5275 67.0563 43.8476H69.3075C69.3075 54.767 60.4249 63.6498 49.5053 63.6498Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M107.497 42.4332C107.497 52.5886 99.2656 60.8209 89.1109 60.8209C78.9536 60.8209 70.7219 52.5886 70.7219 42.4332H107.497Z"
+              fill="#CB3E3E"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M89.111 63.6498C78.1946 63.6498 69.3076 54.767 69.3076 43.8476H71.5586C71.5586 53.5275 79.4346 61.3995 89.111 61.3995C98.7898 61.3995 106.663 53.5275 106.663 43.8476H108.912C108.912 54.767 100.03 63.6498 89.111 63.6498Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M145.687 42.4332C145.687 52.5886 137.457 60.8209 127.301 60.8209C117.142 60.8209 108.912 52.5886 108.912 42.4332H145.687Z"
+              fill="white"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M127.3 63.6498C116.377 63.6498 107.497 54.767 107.497 43.8476H109.749C109.749 53.5275 117.623 61.3995 127.3 61.3995C136.976 61.3995 144.851 53.5275 144.851 43.8476H147.102C147.102 54.767 138.219 63.6498 127.3 63.6498Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M32.9679 41.5943H143.837L128.656 2.25088H48.1485L32.9679 41.5943ZM147.102 43.8476H29.7032L46.6209 0H130.184L147.102 43.8476Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M68.6003 170.569C63.9903 170.569 60.2429 174.317 60.2429 178.925C60.2429 183.533 63.9903 187.284 68.6003 187.284C73.2078 187.284 76.9552 183.533 76.9552 178.925C76.9552 174.317 73.2078 170.569 68.6003 170.569ZM68.6003 189.535C62.7504 189.535 57.992 184.773 57.992 178.925C57.992 173.077 62.7504 168.318 68.6003 168.318C74.4502 168.318 79.2086 173.077 79.2086 178.925C79.2086 184.773 74.4502 189.535 68.6003 189.535Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M16.9731 73.0177C14.9374 73.0177 12.0987 78.871 12.0987 88.4025C12.0987 97.934 14.9374 103.787 16.9731 103.787C19.0089 103.787 21.8451 97.934 21.8451 88.4025C21.8451 78.871 19.0089 73.0177 16.9731 73.0177ZM16.9732 106.083C12.3787 106.083 9.901 96.9721 9.901 88.4025C9.901 79.8303 12.3787 70.722 16.9732 70.722C21.5677 70.722 24.0454 79.8303 24.0454 88.4025C24.0454 96.9721 21.5677 106.083 16.9732 106.083Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M17.6803 71.5658C9.17655 71.5658 2.25557 78.4843 2.25557 86.988C2.25557 95.4943 9.17655 102.413 17.6803 102.413C26.1866 102.413 33.1051 95.4943 33.1051 86.988C33.1051 78.4843 26.1866 71.5658 17.6803 71.5658ZM17.6805 104.669C7.93165 104.669 0 96.7369 0 86.9881C0 77.2392 7.93165 69.3076 17.6805 69.3076C27.4293 69.3076 35.361 77.2392 35.361 86.9881C35.361 96.7369 27.4293 104.669 17.6805 104.669Z"
+              fill="#424242"
+            />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M1.41437 88.9612H35.3609V86.4293H1.41437V88.9612Z"
+              fill="#424242"
+            />
+          </svg>
+        </div>
+        <div class="tw-mb-[65px]">
+          <p class="tw-text-center tw-text-lg tw-font-semibold tw-mb-[31px]">
+            Oops! Your cart is empty.
+          </p>
+          <p class="tw-text-center tw-text-base tw-font-semibold tw-mb-[31px]">
+            Please add something to continue placing your order
+          </p>
+        </div>
+        <div class="tw-mb-[15px] tw-text-center">
+          <button
+            class="tw-w-full tw-max-w-[320px] tw-h-14 tw-bg-[#05162E] tw-text-white tw-text-2xl tw-font-medium tw-rounded"
+          >
+            Main Menu
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
