--- a/src/app/item-header/item-header.component.html
+++ b/src/app/item-header/item-header.component.html
@@ -18,8 +18,9 @@
       />
     </svg>
   </button>
-  <span class="tw-text-[#424242] tw-font-semibold tw-text-sm tw-leading-[17px]"
-    >Item List</span
+  <span
+    class="tw-text-[#424242] tw-font-semibold tw-text-sm tw-leading-[17px]"
+    >{{ componentName }}</span
   >
   <button
     class="tw-border-0 tw-outline-none tw-bg-white"
