--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div
-  class="tw-max-w-3xl tw-w-full tw-m-auto tw-pb-12 tw-min-h-screen"
+  class="tw-max-w-3xl tw-w-full tw-m-auto tw-min-h-screen"
   [ngClass]="showHeader ? 'tw-pt-14' : ''"
+  [ngClass]="showFooter ? 'tw-pb-12' : ''"
 >
   <app-header *ngIf="showHeader"></app-header>
   <app-item-header *ngIf="!showHeader"></app-item-header>
@@ -10,5 +11,5 @@
   >
     <router-outlet />
   </div>
-  <app-footer></app-footer>
+  <app-footer *ngIf="showFooter"></app-footer>
 </div>
