--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,11 @@
   [ngClass]="showFooter ? 'tw-pb-12' : ''"
 >
   <app-header *ngIf="showHeader"></app-header>
-  <app-item-header *ngIf="!showHeader"></app-item-header>
+  <app-item-header
+    *ngIf="!showHeader"
+    [componentName]="componentName"
+    [showCart]="showCart"
+  ></app-item-header>
 
   <div
     class="tw-w-full tw-overflow-x-hidden tw-border tw-border-t-0 tw-border-solid tw-border-[rgba(0,0,0,0.1)]"
