--- a/src/app/empty-cart/empty-cart.component.html
+++ b/src/app/empty-cart/empty-cart.component.html
@@ -240,6 +240,7 @@
         <div class="tw-mb-[15px] tw-text-center">
           <button
             class="tw-w-full tw-max-w-[320px] tw-h-14 tw-bg-[#05162E] tw-text-white tw-text-2xl tw-font-medium tw-rounded"
+            (click)="navigateToHomePage()"
           >
             Main Menu
           </button>
